<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.weimiao.afinal.MainActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:id="@+id/headtitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/treathit"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/treat_in"
        android:layout_below="@+id/headtitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="@string/dairy_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dairy_switch"
        android:layout_marginTop="10dp"
        android:layout_alignBaseline="@+id/treat_in"
        android:layout_alignBottom="@+id/treat_in"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/treat_in"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/flavor_spinner"
        android:entries="@array/spinnerary"/>

    <ToggleButton
        android:text="@string/cup_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/flavor_spinner"
        android:layout_alignBaseline="@+id/flavor_spinner"
        android:textOn="@string/toggle_off"
        android:textOff="@string/toggle_on"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/toggleButton" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flavor_spinner"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_alignTop="@+id/flavor_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <RadioButton
            android:text="@string/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1" />
    </RadioGroup>

    <CheckBox
        android:text="@string/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:id="@+id/checkBox1"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <CheckBox
        android:text="@string/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@id/checkBox1"
        android:id="@+id/checkBox2" />

    <CheckBox
        android:text="@string/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@id/checkBox2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/checkBox3" />

    <Button
        android:text="@string/treatmebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="treatMe"
        android:id="@+id/treatBtn" />

    <TextView
        android:text="@string/ordertext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/treatBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/orderText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/chocolate"
        android:id="@+id/treatImage"
        android:layout_below="@+id/treatBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imagedsp" />

    <Button
        android:text="@string/findbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="findStore"
        android:id="@+id/findBtn" />

</RelativeLayout>
